--- a/src/App.css
+++ b/src/App.css
@@ -52,3 +52,11 @@ button:hover {
   padding: 3px 7px;
   font-size: 20px;
 }
+#homePageTitle{
+  color: white;
+  font-weight: bolder;
+  width: fit-content;
+  background-color: steelblue;
+  padding: 15px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
