--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -22,6 +22,11 @@ label {
     border-color: white;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
+#searchButton:hover{
+    background: white;
+    color: steelblue;
+    cursor: pointer;
+}
 #searchBody{
     float: right;
   padding: 6px;
