--- a/src/components/NewPost/NewPost.css
+++ b/src/components/NewPost/NewPost.css
@@ -14,6 +14,11 @@
     color: white;
     border-color: white;
 }
+#postButton:hover{
+    background: white;
+    color: steelblue;
+    cursor: pointer;
+}
 #newPostPreText{
     font-weight: bold;
     font-size: x-large;
